--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<section>
-		<h1>Git, GitHub & the Command Line</h1>
-		<p>Gotta love becoming a collaborative coder <3</p>
+		<h1>Need a refreseher - you gonna help me right!</h1>
+		<p>Always love to help - so colloboration is my thing I just did not know it <3</p>
 		<img src="img/happy-blue-robot.png">
 	</section>
 </body>
